--- a/app/templates/navigation/activeUsersL7D.html
+++ b/app/templates/navigation/activeUsersL7D.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
     <br>
   </div>
 </div>
@@ -10,7 +10,7 @@
 
 
 <div class="row">
-  <div class="span10 offset1">
+  <div class="col-md-10 col-md-offset-1">
       <h4>L'évolution du nombre d'utilisateurs actifs sur 7jours:</h4>
     <div id="chart1" style="width:100%; margin: 0 auto"></div>
   </div>
