--- a/app/templates/navigation/exercices_level0.html
+++ b/app/templates/navigation/exercices_level0.html
@@ -15,11 +15,11 @@
 </ul>
 
 
-<a class="btn btn-large btn-block btn-primary" href={{url_for('new_exo', exo_id=new_id)}}>Saisir un nouvel exercice</a>
+<a class="btn btn-lg btn-block btn-primary" href={{url_for('new_exo', exo_id=new_id)}}>Saisir un nouvel exercice</a>
 
 <br>
 
-<a class="btn btn-large btn-block btn-success" href={{url_for('generate_json')}}>Télécharger un json de la DB pour l'appli</a>
+<a class="btn btn-lg btn-block btn-success" href={{url_for('generate_json')}}>Télécharger un json de la DB pour l'appli</a>
 
 {% endblock %}
 
