--- a/app/templates/navigation/exercices_level1.html
+++ b/app/templates/navigation/exercices_level1.html
@@ -3,7 +3,7 @@
 	<h1>Administration des exercices</h1>
 
 <ul class="breadcrumb">
-  <li><a href={{ url_for('exercices_l0')}}>Home</a><span class="divider">/</span></li>
+  <li><a href={{ url_for('exercices_l0')}}>Home</a></li>
   <li class="active">{{part}}</li>
 </ul>
 
