--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,26 +21,30 @@
 
 <body>
 
-    <div class="navbar navbar-inverse navbar-static-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="brand" href="#">Exercix-DB</a>
-                <div class="nav-collapse collapse">
-                    <ul class="nav">
-                        <li><a href="/index">Dashboard</a>
-                        <li><a href="/exercices">Exercices</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
+<div class="container">
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/index">Exercix-DB</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+      <li><a href="/index">Dashboard</a>
+      <li><a href="/exercices">Exercices</a></li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
+</div>
 
     <br>
 
