--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,8 +23,9 @@
 
 
 
-<div class="container">
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+
+<nav class="navbar navbar-inverse navbar-fixed-top" role="banner">
+  <div class="container">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -37,14 +38,15 @@
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
+  <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
     <ul class="nav navbar-nav">
       <li><a href="/index">Dashboard</a>
       <li><a href="/exercices">Exercices</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
-</nav>
 </div>
+</nav>
+
 
     <br>
 
