--- a/app/templates/edition/exo_edit_new.html
+++ b/app/templates/edition/exo_edit_new.html
@@ -96,6 +96,8 @@
     </div>
 
     {{form_field(form.source )}}
+    {{form_field(form.appli )}}
+    {{form_field(form.package )}}
     {{form_field(form.author, value="edelans@gmail.com")}}
     {{form_field(form.school)}}
 
