--- a/app/templates/authors/exercices_level1.html
+++ b/app/templates/authors/exercices_level1.html
@@ -1,15 +1,15 @@
-{% extends "base.html" %}
+{% extends "authors/base2.html" %}
 {% block content %}
 	<h1>Administration des exercices</h1>
 
 <ul class="breadcrumb">
-  <li><a href={{ url_for('exercices_l0')}}>Home</a></li>
+  <li><a href={{ url_for('authors_exercices_l0')}}>Home</a></li>
   <li class="active">{{part}}</li>
 </ul>
 
 <ul class="nav nav-tabs nav-stacked">
     {% for chapter in chapters %}
-    	<li><a href={{ url_for('exercices_l2', part=part, chapter=chapter[0])}}>{{chapter[0]}}</a></li>
+    	<li><a href={{ url_for('authors_exercices_l2', part=part, chapter=chapter[0])}}>{{chapter[0]}}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
